--- a/config/database.yml
+++ b/config/database.yml
@@ -21,7 +21,7 @@ default: &default
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: <%= ENV['POSTGRES_USER'] %>
-  password:
+  password: <%= ENV['POSTGRES_PASSWORD'] %>
   timeout: 5000
   host: <%= ENV['POSTGRES_HOST'] %>
 
